edition = "2023";

package resolver.v1;

option go_package = "github.com/docker/secrets-engine/pkg/api/resolver/v1;resolverv1";

service EngineService {
  // RegisterPlugin registers the plugin with the engine.
  rpc RegisterPlugin(RegisterPluginRequest) returns (RegisterPluginResponse);
}

message RegisterPluginRequest {
  // Name of the plugin to register.
  string plugin_name = 1;
  // Plugin invocation index. Plugins are called in ascending index order.
  string plugin_idx = 2;
}

message RegisterPluginResponse {}

service PluginService {
  // Configure the plugin and get its event subscription.
  rpc Configure(ConfigureRequest) returns (ConfigureResponse);

  // Shutdown a plugin (let it know the runtime is going down).
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);

}

message ConfigureRequest {
  // Any plugin-specific data, if present among the engine configuration.
  string config = 1;
  // Name of the runtime engine is running in.
  string engine_name = 2;
  // Version of the runtime engine is running in.
  string engine_version = 3;
  // Configured registration timeout in milliseconds.
  int64 registration_timeout = 4;
  // Configured request processing timeout in milliseconds.
  int64 request_timeout = 5;
}

message ConfigureResponse {}

message ShutdownRequest {}

message ShutdownResponse {}